kustomize/django-app/django-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-htmx-app-demo
  namespace: django
  labels:
    app: django-htmx-app-demo
spec:
  selector:
    matchLabels:
      app: django-htmx-app-demo
  replicas: 1
  template:
    metadata:
      labels:
        app: django-htmx-app-demo
    spec:
      containers:
        - name: django-htmx-app-demo
          image: harbor.zencluster.org/wilinger/django-htmx-app-demo:1.0.3
          imagePullPolicy: Always
          args:
            - ./docker-entrypoint.sh
      imagePullSecrets:
        - name: regcred
