kustomize/django-app/django-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  labels:
    app.kubernetes.io/instance: 'django-htmx-app-demo'
    app.kubernetes.io/name: 'django-htmx-app-demo'
spec:
  tls:
  - hosts:
    - notecards.zencluster.org
  rules:
  - host: notecards.zencluster.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: django-service
            port:
              number: 80
  ingressClassName: nginx
